parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    POUND
    PRINT

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression SEMICOLON
Rule 2     statement -> boolean SEMICOLON
Rule 3     statement -> list SEMICOLON
Rule 4     statement -> STRING SEMICOLON
Rule 5     expression -> LPAREN expression RPAREN
Rule 6     expression -> STRING PLUS STRING
Rule 7     expression -> expression PLUS factor
Rule 8     expression -> expression MINUS factor
Rule 9     expression -> expression TIMES factor
Rule 10    expression -> expression DIVIDE factor
Rule 11    expression -> expression DIV factor
Rule 12    expression -> expression MOD factor
Rule 13    expression -> expression POWER factor
Rule 14    expression -> MINUS expression
Rule 15    expression -> expression EOP expression
Rule 16    expression -> factor
Rule 17    factor -> NUMBER
Rule 18    boolean -> expression EQUAL expression
Rule 19    boolean -> expression NOTEQUAL expression
Rule 20    boolean -> boolean EQUAL boolean
Rule 21    boolean -> boolean NOTEQUAL boolean
Rule 22    boolean -> expression GREATER factor
Rule 23    boolean -> expression LESS factor
Rule 24    boolean -> expression GREATEROREQUAL factor
Rule 25    boolean -> expression LESSOREQUAL factor
Rule 26    boolean -> expression EQUAL factor
Rule 27    boolean -> STRING GREATER STRING
Rule 28    boolean -> STRING LESS STRING
Rule 29    boolean -> STRING GREATEROREQUAL STRING
Rule 30    boolean -> STRING LESSOREQUAL STRING
Rule 31    boolean -> STRING EQUAL STRING
Rule 32    boolean -> boolean AND boolean
Rule 33    boolean -> boolean OR boolean
Rule 34    boolean -> NOT boolean
Rule 35    boolean -> TRUE
Rule 36    boolean -> FALSE
Rule 37    list_element -> expression
Rule 38    list_element -> STRING
Rule 39    list_element -> boolean
Rule 40    list_element -> list_element expression
Rule 41    list_element -> list_element STRING
Rule 42    list_element -> list_element boolean
Rule 43    list_element -> list_element COMMA
Rule 44    list -> LBRACE list_element RBRACE
Rule 45    list -> LBRACE RBRACE
Rule 46    expression -> list LBRACE expression RBRACE
Rule 47    expression -> STRING LBRACE expression RBRACE
Rule 48    list -> expression CONS list
Rule 49    list -> boolean CONS list
Rule 50    list -> STRING CONS list
Rule 51    list -> list CONS list
Rule 52    boolean -> expression IN list
Rule 53    boolean -> boolean IN list
Rule 54    boolean -> STRING IN list
Rule 55    boolean -> list IN list

Terminals, with rules where they appear

AND                  : 32
COMMA                : 43
CONS                 : 48 49 50 51
DIV                  : 11
DIVIDE               : 10
EOP                  : 15
EQUAL                : 18 20 26 31
FALSE                : 36
GREATER              : 22 27
GREATEROREQUAL       : 24 29
IN                   : 52 53 54 55
LBRACE               : 44 45 46 47
LESS                 : 23 28
LESSOREQUAL          : 25 30
LPAREN               : 5
MINUS                : 8 14
MOD                  : 12
NOT                  : 34
NOTEQUAL             : 19 21
NUMBER               : 17
OR                   : 33
PLUS                 : 6 7
POUND                : 
POWER                : 13
PRINT                : 
RBRACE               : 44 45 46 47
RPAREN               : 5
SEMICOLON            : 1 2 3 4
STRING               : 4 6 6 27 27 28 28 29 29 30 30 31 31 38 41 47 50 54
TIMES                : 9
TRUE                 : 35
error                : 

Nonterminals, with rules where they appear

boolean              : 2 20 20 21 21 32 32 33 33 34 39 42 49 53
expression           : 1 5 7 8 9 10 11 12 13 14 15 15 18 18 19 19 22 23 24 25 26 37 40 46 47 48 52
factor               : 7 8 9 10 11 12 13 16 22 23 24 25 26
list                 : 3 46 48 49 50 51 51 52 53 54 55 55
list_element         : 40 41 42 43 44
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression SEMICOLON
    (2) statement -> . boolean SEMICOLON
    (3) statement -> . list SEMICOLON
    (4) statement -> . STRING SEMICOLON
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . STRING PLUS STRING
    (7) expression -> . expression PLUS factor
    (8) expression -> . expression MINUS factor
    (9) expression -> . expression TIMES factor
    (10) expression -> . expression DIVIDE factor
    (11) expression -> . expression DIV factor
    (12) expression -> . expression MOD factor
    (13) expression -> . expression POWER factor
    (14) expression -> . MINUS expression
    (15) expression -> . expression EOP expression
    (16) expression -> . factor
    (46) expression -> . list LBRACE expression RBRACE
    (47) expression -> . STRING LBRACE expression RBRACE
    (18) boolean -> . expression EQUAL expression
    (19) boolean -> . expression NOTEQUAL expression
    (20) boolean -> . boolean EQUAL boolean
    (21) boolean -> . boolean NOTEQUAL boolean
    (22) boolean -> . expression GREATER factor
    (23) boolean -> . expression LESS factor
    (24) boolean -> . expression GREATEROREQUAL factor
    (25) boolean -> . expression LESSOREQUAL factor
    (26) boolean -> . expression EQUAL factor
    (27) boolean -> . STRING GREATER STRING
    (28) boolean -> . STRING LESS STRING
    (29) boolean -> . STRING GREATEROREQUAL STRING
    (30) boolean -> . STRING LESSOREQUAL STRING
    (31) boolean -> . STRING EQUAL STRING
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . NOT boolean
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (52) boolean -> . expression IN list
    (53) boolean -> . boolean IN list
    (54) boolean -> . STRING IN list
    (55) boolean -> . list IN list
    (44) list -> . LBRACE list_element RBRACE
    (45) list -> . LBRACE RBRACE
    (48) list -> . expression CONS list
    (49) list -> . boolean CONS list
    (50) list -> . STRING CONS list
    (51) list -> . list CONS list
    (17) factor -> . NUMBER

    STRING          shift and go to state 5
    LPAREN          shift and go to state 6
    MINUS           shift and go to state 8
    NOT             shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    LBRACE          shift and go to state 9
    NUMBER          shift and go to state 13

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    boolean                        shift and go to state 3
    list                           shift and go to state 4
    factor                         shift and go to state 7

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression . SEMICOLON
    (7) expression -> expression . PLUS factor
    (8) expression -> expression . MINUS factor
    (9) expression -> expression . TIMES factor
    (10) expression -> expression . DIVIDE factor
    (11) expression -> expression . DIV factor
    (12) expression -> expression . MOD factor
    (13) expression -> expression . POWER factor
    (15) expression -> expression . EOP expression
    (18) boolean -> expression . EQUAL expression
    (19) boolean -> expression . NOTEQUAL expression
    (22) boolean -> expression . GREATER factor
    (23) boolean -> expression . LESS factor
    (24) boolean -> expression . GREATEROREQUAL factor
    (25) boolean -> expression . LESSOREQUAL factor
    (26) boolean -> expression . EQUAL factor
    (52) boolean -> expression . IN list
    (48) list -> expression . CONS list

    SEMICOLON       shift and go to state 14
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    DIV             shift and go to state 19
    MOD             shift and go to state 20
    POWER           shift and go to state 21
    EOP             shift and go to state 22
    EQUAL           shift and go to state 23
    NOTEQUAL        shift and go to state 24
    GREATER         shift and go to state 25
    LESS            shift and go to state 26
    GREATEROREQUAL  shift and go to state 27
    LESSOREQUAL     shift and go to state 28
    IN              shift and go to state 29
    CONS            shift and go to state 30


state 3

    (2) statement -> boolean . SEMICOLON
    (20) boolean -> boolean . EQUAL boolean
    (21) boolean -> boolean . NOTEQUAL boolean
    (32) boolean -> boolean . AND boolean
    (33) boolean -> boolean . OR boolean
    (53) boolean -> boolean . IN list
    (49) list -> boolean . CONS list

    SEMICOLON       shift and go to state 31
    EQUAL           shift and go to state 32
    NOTEQUAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    IN              shift and go to state 36
    CONS            shift and go to state 37


state 4

    (3) statement -> list . SEMICOLON
    (46) expression -> list . LBRACE expression RBRACE
    (55) boolean -> list . IN list
    (51) list -> list . CONS list

    SEMICOLON       shift and go to state 38
    LBRACE          shift and go to state 39
    IN              shift and go to state 40
    CONS            shift and go to state 41


state 5

    (4) statement -> STRING . SEMICOLON
    (6) expression -> STRING . PLUS STRING
    (47) expression -> STRING . LBRACE expression RBRACE
    (27) boolean -> STRING . GREATER STRING
    (28) boolean -> STRING . LESS STRING
    (29) boolean -> STRING . GREATEROREQUAL STRING
    (30) boolean -> STRING . LESSOREQUAL STRING
    (31) boolean -> STRING . EQUAL STRING
    (54) boolean -> STRING . IN list
    (50) list -> STRING . CONS list

    SEMICOLON       shift and go to state 42
    PLUS            shift and go to state 43
    LBRACE          shift and go to state 44
    GREATER         shift and go to state 45
    LESS            shift and go to state 46
    GREATEROREQUAL  shift and go to state 47
    LESSOREQUAL     shift and go to state 48
    EQUAL           shift and go to state 49
    IN              shift and go to state 50
    CONS            shift and go to state 51


state 6

    (5) expression -> LPAREN . expression RPAREN
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . STRING PLUS STRING
    (7) expression -> . expression PLUS factor
    (8) expression -> . expression MINUS factor
    (9) expression -> . expression TIMES factor
    (10) expression -> . expression DIVIDE factor
    (11) expression -> . expression DIV factor
    (12) expression -> . expression MOD factor
    (13) expression -> . expression POWER factor
    (14) expression -> . MINUS expression
    (15) expression -> . expression EOP expression
    (16) expression -> . factor
    (46) expression -> . list LBRACE expression RBRACE
    (47) expression -> . STRING LBRACE expression RBRACE
    (17) factor -> . NUMBER
    (44) list -> . LBRACE list_element RBRACE
    (45) list -> . LBRACE RBRACE
    (48) list -> . expression CONS list
    (49) list -> . boolean CONS list
    (50) list -> . STRING CONS list
    (51) list -> . list CONS list
    (18) boolean -> . expression EQUAL expression
    (19) boolean -> . expression NOTEQUAL expression
    (20) boolean -> . boolean EQUAL boolean
    (21) boolean -> . boolean NOTEQUAL boolean
    (22) boolean -> . expression GREATER factor
    (23) boolean -> . expression LESS factor
    (24) boolean -> . expression GREATEROREQUAL factor
    (25) boolean -> . expression LESSOREQUAL factor
    (26) boolean -> . expression EQUAL factor
    (27) boolean -> . STRING GREATER STRING
    (28) boolean -> . STRING LESS STRING
    (29) boolean -> . STRING GREATEROREQUAL STRING
    (30) boolean -> . STRING LESSOREQUAL STRING
    (31) boolean -> . STRING EQUAL STRING
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . NOT boolean
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (52) boolean -> . expression IN list
    (53) boolean -> . boolean IN list
    (54) boolean -> . STRING IN list
    (55) boolean -> . list IN list

    LPAREN          shift and go to state 6
    STRING          shift and go to state 53
    MINUS           shift and go to state 8
    NUMBER          shift and go to state 13
    LBRACE          shift and go to state 9
    NOT             shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12

    expression                     shift and go to state 52
    factor                         shift and go to state 7
    list                           shift and go to state 54
    boolean                        shift and go to state 55

state 7

    (16) expression -> factor .

    SEMICOLON       reduce using rule 16 (expression -> factor .)
    PLUS            reduce using rule 16 (expression -> factor .)
    MINUS           reduce using rule 16 (expression -> factor .)
    TIMES           reduce using rule 16 (expression -> factor .)
    DIVIDE          reduce using rule 16 (expression -> factor .)
    DIV             reduce using rule 16 (expression -> factor .)
    MOD             reduce using rule 16 (expression -> factor .)
    POWER           reduce using rule 16 (expression -> factor .)
    EOP             reduce using rule 16 (expression -> factor .)
    EQUAL           reduce using rule 16 (expression -> factor .)
    NOTEQUAL        reduce using rule 16 (expression -> factor .)
    GREATER         reduce using rule 16 (expression -> factor .)
    LESS            reduce using rule 16 (expression -> factor .)
    GREATEROREQUAL  reduce using rule 16 (expression -> factor .)
    LESSOREQUAL     reduce using rule 16 (expression -> factor .)
    IN              reduce using rule 16 (expression -> factor .)
    CONS            reduce using rule 16 (expression -> factor .)
    RPAREN          reduce using rule 16 (expression -> factor .)
    RBRACE          reduce using rule 16 (expression -> factor .)
    STRING          reduce using rule 16 (expression -> factor .)
    COMMA           reduce using rule 16 (expression -> factor .)
    LPAREN          reduce using rule 16 (expression -> factor .)
    NOT             reduce using rule 16 (expression -> factor .)
    TRUE            reduce using rule 16 (expression -> factor .)
    FALSE           reduce using rule 16 (expression -> factor .)
    NUMBER          reduce using rule 16 (expression -> factor .)
    LBRACE          reduce using rule 16 (expression -> factor .)
    AND             reduce using rule 16 (expression -> factor .)
    OR              reduce using rule 16 (expression -> factor .)


state 8

    (14) expression -> MINUS . expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . STRING PLUS STRING
    (7) expression -> . expression PLUS factor
    (8) expression -> . expression MINUS factor
    (9) expression -> . expression TIMES factor
    (10) expression -> . expression DIVIDE factor
    (11) expression -> . expression DIV factor
    (12) expression -> . expression MOD factor
    (13) expression -> . expression POWER factor
    (14) expression -> . MINUS expression
    (15) expression -> . expression EOP expression
    (16) expression -> . factor
    (46) expression -> . list LBRACE expression RBRACE
    (47) expression -> . STRING LBRACE expression RBRACE
    (17) factor -> . NUMBER
    (44) list -> . LBRACE list_element RBRACE
    (45) list -> . LBRACE RBRACE
    (48) list -> . expression CONS list
    (49) list -> . boolean CONS list
    (50) list -> . STRING CONS list
    (51) list -> . list CONS list
    (18) boolean -> . expression EQUAL expression
    (19) boolean -> . expression NOTEQUAL expression
    (20) boolean -> . boolean EQUAL boolean
    (21) boolean -> . boolean NOTEQUAL boolean
    (22) boolean -> . expression GREATER factor
    (23) boolean -> . expression LESS factor
    (24) boolean -> . expression GREATEROREQUAL factor
    (25) boolean -> . expression LESSOREQUAL factor
    (26) boolean -> . expression EQUAL factor
    (27) boolean -> . STRING GREATER STRING
    (28) boolean -> . STRING LESS STRING
    (29) boolean -> . STRING GREATEROREQUAL STRING
    (30) boolean -> . STRING LESSOREQUAL STRING
    (31) boolean -> . STRING EQUAL STRING
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . NOT boolean
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (52) boolean -> . expression IN list
    (53) boolean -> . boolean IN list
    (54) boolean -> . STRING IN list
    (55) boolean -> . list IN list

    LPAREN          shift and go to state 6
    STRING          shift and go to state 53
    MINUS           shift and go to state 8
    NUMBER          shift and go to state 13
    LBRACE          shift and go to state 9
    NOT             shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12

    expression                     shift and go to state 56
    factor                         shift and go to state 7
    list                           shift and go to state 54
    boolean                        shift and go to state 55

state 9

    (44) list -> LBRACE . list_element RBRACE
    (45) list -> LBRACE . RBRACE
    (37) list_element -> . expression
    (38) list_element -> . STRING
    (39) list_element -> . boolean
    (40) list_element -> . list_element expression
    (41) list_element -> . list_element STRING
    (42) list_element -> . list_element boolean
    (43) list_element -> . list_element COMMA
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . STRING PLUS STRING
    (7) expression -> . expression PLUS factor
    (8) expression -> . expression MINUS factor
    (9) expression -> . expression TIMES factor
    (10) expression -> . expression DIVIDE factor
    (11) expression -> . expression DIV factor
    (12) expression -> . expression MOD factor
    (13) expression -> . expression POWER factor
    (14) expression -> . MINUS expression
    (15) expression -> . expression EOP expression
    (16) expression -> . factor
    (46) expression -> . list LBRACE expression RBRACE
    (47) expression -> . STRING LBRACE expression RBRACE
    (18) boolean -> . expression EQUAL expression
    (19) boolean -> . expression NOTEQUAL expression
    (20) boolean -> . boolean EQUAL boolean
    (21) boolean -> . boolean NOTEQUAL boolean
    (22) boolean -> . expression GREATER factor
    (23) boolean -> . expression LESS factor
    (24) boolean -> . expression GREATEROREQUAL factor
    (25) boolean -> . expression LESSOREQUAL factor
    (26) boolean -> . expression EQUAL factor
    (27) boolean -> . STRING GREATER STRING
    (28) boolean -> . STRING LESS STRING
    (29) boolean -> . STRING GREATEROREQUAL STRING
    (30) boolean -> . STRING LESSOREQUAL STRING
    (31) boolean -> . STRING EQUAL STRING
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . NOT boolean
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (52) boolean -> . expression IN list
    (53) boolean -> . boolean IN list
    (54) boolean -> . STRING IN list
    (55) boolean -> . list IN list
    (17) factor -> . NUMBER
    (44) list -> . LBRACE list_element RBRACE
    (45) list -> . LBRACE RBRACE
    (48) list -> . expression CONS list
    (49) list -> . boolean CONS list
    (50) list -> . STRING CONS list
    (51) list -> . list CONS list

    RBRACE          shift and go to state 58
    STRING          shift and go to state 60
    LPAREN          shift and go to state 6
    MINUS           shift and go to state 8
    NOT             shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    NUMBER          shift and go to state 13
    LBRACE          shift and go to state 9

    list_element                   shift and go to state 57
    expression                     shift and go to state 59
    boolean                        shift and go to state 61
    factor                         shift and go to state 7
    list                           shift and go to state 62

state 10

    (34) boolean -> NOT . boolean
    (18) boolean -> . expression EQUAL expression
    (19) boolean -> . expression NOTEQUAL expression
    (20) boolean -> . boolean EQUAL boolean
    (21) boolean -> . boolean NOTEQUAL boolean
    (22) boolean -> . expression GREATER factor
    (23) boolean -> . expression LESS factor
    (24) boolean -> . expression GREATEROREQUAL factor
    (25) boolean -> . expression LESSOREQUAL factor
    (26) boolean -> . expression EQUAL factor
    (27) boolean -> . STRING GREATER STRING
    (28) boolean -> . STRING LESS STRING
    (29) boolean -> . STRING GREATEROREQUAL STRING
    (30) boolean -> . STRING LESSOREQUAL STRING
    (31) boolean -> . STRING EQUAL STRING
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . NOT boolean
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (52) boolean -> . expression IN list
    (53) boolean -> . boolean IN list
    (54) boolean -> . STRING IN list
    (55) boolean -> . list IN list
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . STRING PLUS STRING
    (7) expression -> . expression PLUS factor
    (8) expression -> . expression MINUS factor
    (9) expression -> . expression TIMES factor
    (10) expression -> . expression DIVIDE factor
    (11) expression -> . expression DIV factor
    (12) expression -> . expression MOD factor
    (13) expression -> . expression POWER factor
    (14) expression -> . MINUS expression
    (15) expression -> . expression EOP expression
    (16) expression -> . factor
    (46) expression -> . list LBRACE expression RBRACE
    (47) expression -> . STRING LBRACE expression RBRACE
    (44) list -> . LBRACE list_element RBRACE
    (45) list -> . LBRACE RBRACE
    (48) list -> . expression CONS list
    (49) list -> . boolean CONS list
    (50) list -> . STRING CONS list
    (51) list -> . list CONS list
    (17) factor -> . NUMBER

    STRING          shift and go to state 65
    NOT             shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    LPAREN          shift and go to state 6
    MINUS           shift and go to state 8
    LBRACE          shift and go to state 9
    NUMBER          shift and go to state 13

    boolean                        shift and go to state 63
    expression                     shift and go to state 64
    factor                         shift and go to state 7
    list                           shift and go to state 66

state 11

    (35) boolean -> TRUE .

    SEMICOLON       reduce using rule 35 (boolean -> TRUE .)
    EQUAL           reduce using rule 35 (boolean -> TRUE .)
    NOTEQUAL        reduce using rule 35 (boolean -> TRUE .)
    AND             reduce using rule 35 (boolean -> TRUE .)
    OR              reduce using rule 35 (boolean -> TRUE .)
    IN              reduce using rule 35 (boolean -> TRUE .)
    CONS            reduce using rule 35 (boolean -> TRUE .)
    RBRACE          reduce using rule 35 (boolean -> TRUE .)
    STRING          reduce using rule 35 (boolean -> TRUE .)
    COMMA           reduce using rule 35 (boolean -> TRUE .)
    LPAREN          reduce using rule 35 (boolean -> TRUE .)
    MINUS           reduce using rule 35 (boolean -> TRUE .)
    NOT             reduce using rule 35 (boolean -> TRUE .)
    TRUE            reduce using rule 35 (boolean -> TRUE .)
    FALSE           reduce using rule 35 (boolean -> TRUE .)
    NUMBER          reduce using rule 35 (boolean -> TRUE .)
    LBRACE          reduce using rule 35 (boolean -> TRUE .)


state 12

    (36) boolean -> FALSE .
